--- a/index.css
+++ b/index.css
@@ -16,6 +16,10 @@
     padding-bottom: 30vh;
 }
 
+.subtitle {
+    text-align: center;
+}
+
 .upload-button {
     background-color: #a31f34;
     border-color: #a31f34;
